# unitares

./: .dockerignore  .env.example  .env.postgres  .gitignore  .governance_session  .mcp_session  .pre-commit-markdown-check.sh  AGENTS.md  ARCHITECTURE.md  CASE_STUDY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX_START.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HOUSEKEEPING_COMPLETE.md  INSTALLATION_GUIDE.md  LICENSE  MAINTENANCE_2026-01-12.md  MCP_CRITIQUE.md  MCP_SETUP.md  Makefile  NOTICE  ONBOARDING.md  PATENT_CLAIMS_DRAFT_2025-11-22.md  PITCH.md  PITCH_README.md  PORTFOLIO.md  QUICKSTART.md  README.md  SECURITY_ADVISORY_AGENT_IDENTITY_20251212.md  SECURITY_AUDIT_LAYERING_20251212.md  SECURITY_FIXES_COMPLETED_20251212.md  SELF_RECOVERY_SPEC.md  SESSION_SUMMARY_SECURITY_FIXES_20251212.md  START_HERE.md  TICKET-implicit-identity.md  docker-compose.yml  (+8 more)
.agent-guides/: DEVELOPER_AGENTS.md  FUTURE_CLAUDE_CODE_AGENTS.md  MARKDOWN_POLICY.md  SERVER_INFO.md  SSE_SERVER_INFO.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor/: rules
.github/: dependabot.yml
agents/: README.md  governance-reviewer.md
commands/: checkin.md  diagnose.md  dialectic-respond.md  dialectic.md  governance-start.md
config/: __init__.py  claude-desktop-mcp-config.json  com.unitares.governance-mcp.plist  cursor-mcp-config-example.json  generated-claude-desktop-mcp.json  governance_config.py  mcp-config-claude-desktop.json  mcp-config-cursor.json
dashboard/: README.md  agents.js  colors.js  components.js  dashboard.js  dialectic.js  discoveries.js  eisv-charts.js  fleet-metrics.js  help.json  index.html  phase.html  phase.js  resident-progress.js  residents.js  sentinel.js  state.js  styles.css  timeline.js  utils.js  vigil.js  visualizations.js  watcher.js
data/: .gitkeep  Eno_Richter_Claude_CLI_state.json  README.md  agent_metadata.example.json  agent_metadata.json  audit_log_sample.jsonl  calibration_state.json  claude_chat_escalation_recovery_test.csv  claude_chat_escalation_recovery_test.json  claude_chat_governance_report.csv  claude_chat_governance_report.json  claude_chat_v1.0.3_validation.csv  claude_chat_v1.0.3_validation.json  claude_code_cli_session_20251119_232731.csv  claude_code_cli_session_20251119_232731.json  claude_opus_4.1_session_export.csv  claude_opus_4.1_session_export.json  composer_assistant_26252_history_20251120_011540.json  composer_assistant_26252_history_20251120_011631.csv  composer_assistant_26252_history_20251120_025603.json  composer_assistant_26252_history_20251120_025626.csv  composer_cursor_history_20251119_171118.csv  composer_cursor_history_20251119_171118.json  composer_cursor_history_20251119_180911.json  composer_cursor_history_20251119_180912.csv  funk_state.json  glass_state.json  governance_history_claude_cli_cirwel_20251120_0011.csv  governance_history_cursor_ide.csv  governance_history_cursor_ide.json  haiku-governance-primary-complete-session-with-reflection.json  haiku-governance-primary-optimization-session.json  haiku-governance-primary-risk-optimization-final.json  hikewa_unitares_governance_session_20251124.json  hikewa_unitares_governance_state.json  knowledge_graph.json  opus_hikewa_web_20251125_state.json  opus_mcp_audit_session_final.json  scout_state.json  self_governance_export.json  (+1 more)
demos/: README.md  demo_complete_system.py  demo_end_to_end.py
docs/: AUTOMATIC_RECOVERY.md  BACKUP_STRATEGY.md  CANONICAL_SOURCES.md  CASE_STUDY.md  CHANGELOG.md  CIRCUIT_BREAKER_DIALECTIC.md  CLEANUP_SUMMARY.md  CONFIDENCE_GATING_AND_CALIBRATION.md  CONTRIBUTING.md  DATABASE_CONNECTION_FIX.md  DATA_NOTES.md  DEPLOYMENT_DATA_CAVEAT.md  DEPRECATION_STRATEGY.md  DIALECTIC_IMPROVEMENTS.md  DIALECTIC_STORAGE_DESIGN.md  DOCUMENTATION_GUIDELINES.md  DUAL_LOG_STATUS.md  END_TO_END_FLOW.md  EPISTEMIC_HUMILITY_SAFEGUARDS.md  IDENTITY_PROMPT_ON_RESUME.md  IMPLEMENTATION_COMPARISON.md  MCP_CRITIQUE.md  MCP_SYSTEM_EVOLUTION.md  PUBLIC_OVERVIEW.md  QUICK_REFERENCE.md  README.md  REDIS_IMPLEMENTATION.md  REDIS_PROPOSAL.md  REDIS_VERIFICATION_REPORT.md  RELEASE_NOTES_v2.0.md  SERVER_FIX_AND_UX_IMPROVEMENTS.md  TOOL_SURFACING_AUDIT.md  UNIFIED_ARCHITECTURE.md  UX_IMPROVEMENTS_SUMMARY.md  WHY.md  ai_features_overview.md  authentication-guide.md  database_architecture.md  knowledge-layer.md
examples/: demo_ai_features.py  kimi_governance_client.py  openai_codex_demo.py  test_agents.db
governance_core/: README.md  __init__.py  adaptive_governor.py  coherence.py  dynamics.py  ethical_drift.py  parameters.py  scoring.py
hooks/: hooks.json  session-end  session-start
patches/: IMPLEMENTED_CHANGES.md  identity_analysis_20251225.md  ux_improvements_20251225.md
scripts/: README.md  __init__.py  analyze_drift.py  answer_lumen_questions.py  archive_inactive_agents.py  archive_outdated_discoveries.py  backfill_embeddings.py  backup_governance.sh  calibrate_class_conditional.py  check_ci_python_version_sync.py  check_databases.sh  check_governance_backup_health.sh  check_health.sh  claude_code_bridge.py  cleanup_knowledge_graph.py  cleanup_stale_connections.sh  cleanup_zombie_mcp_servers.sh  com.unitares.governance-mcp.plist  consolidate_dialectic.py  count_tools.py  deploy_ngrok.sh  diagnose_date_context_connection.py  diagnose_mcp_concurrency.py  diagnose_unresponsive_agents.py  doc_audit.sh  dogfood_dialectic.py  emergency_fix_postgres.sh  export_claude_code.py  mcp  (+41 more)
sketch/: pyproject.toml
sketch/caldec/: __init__.py  calibrator.py  cli.py  drift.py  outcomes.py  server.py
(+1563 files in other folders)
