[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-mcp"
version = "2.7.3"
description = "UNITARES Governance MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
full = [
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiofiles>=23.2.1",
    "orjson>=3.9.0",
    "prometheus-client>=0.19.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--cov=src",
    "--cov=governance_core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=25",
    "-v",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore:unclosed database:ResourceWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[tool.coverage.run]
source = ["src", "governance_core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/archive/*",
    "*/demos/*",
    "*/scripts/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
